force-app/main/default/objects/System_Component__c/System_Component__c.object-meta.xml
<CustomObject>
    <label>System Component</label>
    <nameField>
        <label>Audio System Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>