force-app/main/default/objects/System_Component__c/fields/Audio_Component__c.field-meta.xml
<CustomField>
    <fullName>Audio_Component__c</fullName>
    <label>Audio Component</label>
    <referenceTo>Audio_Component__c</referenceTo>
    <relationshipLabel>System Components</relationshipLabel>
    <relationshipName>System_Components</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>