force-app/main/default/objects/System_Component__c/fields/Audio_System__c.field-meta.xml
<CustomField>
    <fullName>Audio_System__c</fullName>
    <label>Audio System</label>
    <referenceTo>Audio_System__c</referenceTo>
    <relationshipLabel>System Components</relationshipLabel>
    <relationshipName>System_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>