force-app/main/default/objects/System_Component__c/fields/Power_Cord__c.field-meta.xml
<CustomField>
    <fullName>Power_Cord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power Cord</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Power Cable</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Cord Powers</relationshipLabel>
    <relationshipName>Cord_Powers</relationshipName>
    <type>Lookup</type>
</CustomField>