force-app/main/default/objects/System_Component__c/fields/Power_Slot__c.field-meta.xml
<CustomField>
    <fullName>Power_Slot__c</fullName>
    <label>Power Slot</label>
    <length>128</length>
    <type>Text</type>
</CustomField>