force-app/main/default/objects/System_Component__c/fields/Power_Source__c.field-meta.xml
<CustomField>
    <fullName>Power_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Power Center, Wall Socket</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Source Powers</relationshipLabel>
    <relationshipName>Source_Powers</relationshipName>
    <type>Lookup</type>
</CustomField>