force-app/main/default/objects/System_Component__c/fields/PSU__c.field-meta.xml
<CustomField>
    <fullName>PSU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSU</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Component__c.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>PSU</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>PSU Powers</relationshipLabel>
    <relationshipName>PSU_Powers</relationshipName>
    <type>Lookup</type>
</CustomField>