force-app/main/default/objects/System_Component__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Audio_System__c</field>
            <operation>equals</operation>
            <valueField>System_Component__c.Audio_System__c</valueField>
        </filterItems>
        <filterItems>
            <field>System_Component__c.Audio_Component__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Preamplifier, Amplifier, Phono Stage, Power Center, Rack, Accessory, Shelf</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Component__c</referenceTo>
    <relationshipLabel>Rack Supports</relationshipLabel>
    <relationshipName>Rack_Supports</relationshipName>
    <type>Lookup</type>
</CustomField>