force-app/main/default/objects/System_Component__c/fields/Support_Slot__c.field-meta.xml
<CustomField>
    <fullName>Support_Slot__c</fullName>
    <label>Support Slot</label>
    <length>128</length>
    <type>Text</type>
</CustomField>