force-app/main/default/objects/System_Component__c/recordTypes/Cable.recordType-meta.xml
<RecordType>
    <fullName>Cable</fullName>
    <active>true</active>
    <label>Cable</label>
</RecordType>