force-app/main/default/objects/System_Component__c/recordTypes/Cartridge.recordType-meta.xml
<RecordType>
    <fullName>Cartridge</fullName>
    <active>true</active>
    <label>Cartridge</label>
</RecordType>