force-app/main/default/objects/System_Component__c/recordTypes/Feet.recordType-meta.xml
<RecordType>
    <fullName>Feet</fullName>
    <active>true</active>
    <label>Feet</label>
</RecordType>