force-app/main/default/objects/System_Component__c/recordTypes/Headshell.recordType-meta.xml
<RecordType>
    <fullName>Headshell</fullName>
    <active>true</active>
    <label>Headshell</label>
</RecordType>