force-app/main/default/objects/System_Component__c/recordTypes/Headshell_Leads.recordType-meta.xml
<RecordType>
    <fullName>Headshell_Leads</fullName>
    <active>true</active>
    <label>Headshell Leads</label>
</RecordType>