force-app/main/default/objects/System_Component__c/recordTypes/Passive.recordType-meta.xml
<RecordType>
    <fullName>Passive</fullName>
    <active>true</active>
    <label>Passive</label>
</RecordType>