force-app/main/default/objects/System_Component__c/recordTypes/Power_Source.recordType-meta.xml
<RecordType>
    <fullName>Power_Source</fullName>
    <active>true</active>
    <label>Power Source</label>
</RecordType>