force-app/main/default/objects/System_Component__c/recordTypes/Powered.recordType-meta.xml
<RecordType>
    <fullName>Powered</fullName>
    <active>true</active>
    <label>Powered</label>
</RecordType>