force-app/main/default/objects/System_Component__c/recordTypes/Preamplifier.recordType-meta.xml
<RecordType>
    <fullName>Preamplifier</fullName>
    <active>true</active>
    <label>Preamplifier</label>
</RecordType>