force-app/main/default/objects/System_Component__c/recordTypes/PSU.recordType-meta.xml
<RecordType>
    <fullName>PSU</fullName>
    <active>true</active>
    <label>PSU</label>
</RecordType>