force-app/main/default/objects/System_Component__c/recordTypes/Rack.recordType-meta.xml
<RecordType>
    <fullName>Rack</fullName>
    <active>true</active>
    <label>Rack</label>
</RecordType>