force-app/main/default/objects/System_Component__c/recordTypes/Shelf.recordType-meta.xml
<RecordType>
    <fullName>Shelf</fullName>
    <active>true</active>
    <label>Shelf</label>
</RecordType>