force-app/main/default/objects/System_Component__c/recordTypes/Tonearm.recordType-meta.xml
<RecordType>
    <fullName>Tonearm</fullName>
    <active>true</active>
    <label>Tonearm</label>
</RecordType>