force-app/main/default/objects/System_Component__c/recordTypes/Wall_Socket.recordType-meta.xml
<RecordType>
    <fullName>Wall_Socket</fullName>
    <active>true</active>
    <label>Wall Socket</label>
</RecordType>